buildscript {
    repositories {
        mavenCentral()
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }

    dependencies {
        classpath "org.asciidoctor:asciidoctor-gradle-jvm:2.4.0"
    }
}

plugins {
    id 'org.springframework.boot' version '2.5.1'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id 'war'
    id "org.asciidoctor.convert" version "2.4.0"
}
apply plugin: "org.asciidoctor.convert"

group = "com.sdm"
version = "1.7.0-SNAPSHOT"
sourceCompatibility = "11"

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    all {
        exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
    }
}

ext {
    set("snippetsDir", file("build/generated-snippets"))
}

asciidoctor {
    sourceDir 'src/main/asciidoc'
    inputs.dir snippetsDir
    dependsOn test
}

repositories {
    mavenCentral()
    flatDir {
        dirs 'libs'
    }
}

dependencies {
    //JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'

    //jasypt
    implementation "com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3"

    //Firebase
    implementation 'com.google.firebase:firebase-admin:7.3.0'

    //Swagger
    implementation "io.springfox:springfox-boot-starter:3.0.0"

    //Barcode
    implementation "com.google.zxing:core:3.4.1"

    //Gson
    implementation 'com.google.code.gson:gson:2.8.7'

    //Myanmar Tool
    implementation 'com.google.myanmartools:myanmar-tools:1.2.0'

    //Thumbnailtor
    implementation 'net.coobird:thumbnailator:0.4.14'
    
    //Google Api Client Library
    implementation 'com.google.api-client:google-api-client:1.31.5'

    //Fake Data http://dius.github.io/java-faker/
    implementation 'com.github.javafaker:javafaker:1.0.2'

    // Reporting
    // https://mvnrepository.com/artifact/net.sf.jasperreports/
    implementation 'com.lowagie:itext:2.1.7'
    implementation 'net.sf.jasperreports:jasperreports:6.17.0'
    implementation 'net.sf.jasperreports:jasperreports:6.17.0'

    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
    implementation "org.springframework.boot:spring-boot-starter-mail"
    implementation "org.springframework.boot:spring-boot-starter-quartz"
    implementation "org.springframework.boot:spring-boot-starter-security"
    implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
    implementation "org.springframework.boot:spring-boot-starter-validation"
    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "org.springframework.session:spring-session-core"
    implementation "org.springframework.session:spring-session-jdbc"
    implementation(group: "org.springframework.boot", name: "spring-boot-starter-log4j2")
    // developmentOnly("org.springframework.boot:spring-boot-devtools")

    //H2 DB
    implementation 'com.h2database:h2'

    //Hibernate Audit
    implementation "org.hibernate:hibernate-envers"

    //PostgreSQL
    runtimeOnly "org.postgresql:postgresql"

    //MySQL Runtime
    runtimeOnly "mysql:mysql-connector-java"

    //lombok
    annotationProcessor "org.projectlombok:lombok"

    //Tomcat
    providedRuntime "org.springframework.boot:spring-boot-starter-tomcat"

    testImplementation("org.springframework.boot:spring-boot-starter-test") {
        exclude group: "org.junit.vintage", module: "junit-vintage-engine"
    }
    testImplementation "org.springframework.security:spring-security-test"
    testImplementation "org.springframework.restdocs:spring-restdocs-mockmvc"
    testImplementation group: "capital.scalable", name: "spring-auto-restdocs-core", version: "2.0.9"
    asciidoctor "org.springframework.restdocs:spring-restdocs-asciidoctor"

    testAnnotationProcessor "org.projectlombok:lombok"

}

test {
    useJUnitPlatform()
    outputs.dir snippetsDir
}

bootWar {
    dependsOn asciidoctor
}
